--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-div{
+/* div{
 	width: 200px;
 	background-color: purple;
 	border-left-color: green;
@@ -9,4 +9,4 @@ div{
 #heading{
 	font-size: 20px;
 	color: white;
-}
+} */
