--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-.container{
-	width: 200px;
-	background-color: purple;
-	border-left-color: green;
-	border-left-width: 5px;
-	padding: 10px;  
-}
-
-.heading{
+#heading{
 	color: white; 
 	font-size: 20px;
 }
