--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+.main{
+	width: 200px;
+	background-color: purple;
+	border-left-color: green;
+	border-left-width: 5px;
+	padding: 10px;  
+}
+
 #heading{
 	color: white; 
 	font-size: 20px;
