--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-/* .main{
+.main{
 	width: 200px;
 	background-color: purple;
-	border-left-color: green;
-	border-left-width: 5px;
+border-left: 5px solid green;
 	padding: 10px;  
-} */
+}
 
 #heading{
 	color: white; 
